<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Remove"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Remove">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#D1F2EB"
        android:text="@string/Delete"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Cake Name :"
        android:textColor="#0B0A0A"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etCakeNameDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/etCakeNameURhint"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnSearchDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/round1"
        android:text="@string/btnSearchUR" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Weight :"
        android:textColor="#0B0A0A"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etWeightDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/etWeightURhint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Category :"
        android:textColor="#0B0A0A"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etCategoryDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/etCategoryURhint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Peice :"
        android:textColor="#0B0A0A"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etPriceDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/etPriceURhint"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnDeleteDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/round1"
        android:text="@string/btnDeleteUR" />
</LinearLayout>