<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Add"
    android:background="@drawable/backimg1">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="#D1F2EB"
        android:text="@string/Add"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Cake Name:"
        android:textColor="#0B0A0A"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etCakeNameADD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/etCakeNameADDhint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Weight : "
        android:textColor="#0B0A0A"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etWeightADD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/etWeightADDhint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Category : "
        android:textColor="#070707"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etCategoryADD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/etCategoryADDhint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="Price :"
        android:textColor="#0B0A0A"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etPriceADD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/etPriceADD"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/BtnAddADD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/round1"
        android:text="@string/btnAddADD" />

</LinearLayout>